Maintain jdk11 compat